force-app/main/default/objects/SM_CodeProduitProjet__mdt/SM_CodeProduitProjet__mdt.object-meta.xml
<CustomObject>
    <description>Métadonnées de correspondance de code produit et le type de projet pour le parcours détection de projet.</description>
    <label>SM_CodeProduitProjet</label>
    <pluralLabel>SM_CodeProduitProjet</pluralLabel>
</CustomObject>