force-app/main/default/objects/SM_CodeProduitProjet__mdt/fields/CodeProduit__c.field-meta.xml
<CustomField>
    <fullName>CodeProduit__c</fullName>
    <description>Code de Produit</description>
    <label>CodeProduit</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>