force-app/main/default/objects/SM_CodeProduitProjet__mdt/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <description>Ordre</description>
    <label>OrderId</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>