force-app/main/default/objects/SM_CodeProduitProjet__mdt/fields/Projet__c.field-meta.xml
<CustomField>
    <fullName>Projet__c</fullName>
    <description>Projet</description>
    <label>Projet</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>