force-app/main/default/objects/SM_CodeProduitProjet__mdt/fields/TypedeProjet__c.field-meta.xml
<CustomField>
    <fullName>TypedeProjet__c</fullName>
    <description>Type de projet</description>
    <label>TypedeProjet</label>
    <length>250</length>
    <type>Text</type>
</CustomField>