force-app/main/default/objects/SM_CodeProduitProjet__mdt/listViews/CustomViewDP.listView-meta.xml
<ListView>
    <fullName>CustomViewDP</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Projet__c</columns>
    <columns>TypedeProjet__c</columns>
    <columns>CodeProduit__c</columns>
    <columns>OrderId__c</columns>
    <filterScope>Everything</filterScope>
    <label>CustomViewDP</label>
    <language>en_US</language>
</ListView>